Adicionando print, metodologia, gravações e testes no documento do singleton

--- a/docs/PadroesDeProjeto/3.1.1Singleton.md
+++ b/docs/PadroesDeProjeto/3.1.1Singleton.md
@@ -1,10 +1,10 @@
 # GOF Criacional - Singleton
 
-## Introdução 
+## 1. Introdução 
 
 O Singleton é um tipo de GOF criacional que tem como objetivo criar uma única instância e que seja facilmente acessível através de um ponto de acesso global <a id="anchor_1" href=#FRM1> [1]</a> (Gamma et al., 1994). Esse padrão é especialmente relevante no contexto do projeto, pois garante que determinados serviços mantenham uma única instância controlada, evitando inconsistências e uso desnecessário de recursos.
 
-## Contexto no Projeto
+## 2. Contexto no Projeto
 
 Para aplicar o padrão **Singleton** no projeto, foi necessário criar as classes responsáveis por gerenciar o serviço de tokens, implementadas utilizando o framework **Django**.  
 A implementação pode ser observada no arquivo [`App/tokens/servicos/token_servico.py`](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_02/blob/main/App/tokens/servicos/token_servico.py), especificamente na classe **`TokenService`**, cujo propósito é **garantir uma única instância do serviço de tokens em toda a aplicação**.
@@ -14,7 +14,7 @@ A utilização desse padrão está em conformidade com os diagramas elaborados n
 - [**Diagrama de Pacotes**](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_02/blob/main/docs/Modelagem/2.3.1.DiagramaDePacote.md)
 
 
-## Metodologia
+## 3. Metodologia
 
 A organização do código foi orientada pelos **artefatos desenvolvidos na Entrega 2**, em especial o **Diagrama de Sequência** e o **Diagrama de Pacotes**, que serviram como base para estruturar o serviço responsável pelo gerenciamento de tokens.  
 
@@ -23,7 +23,7 @@ Seguindo esses diagramas, o grupo manteve a consistência da arquitetura planeja
 O **diagrama do Singleton** foi desenvolvido pelos integrantes responsáveis pelos artefatos de modelagem, com base na **interpretação direta do código-fonte** da classe `TokenService`. Esse processo de modelagem pós-implementação foi adotado para garantir que o diagrama refletisse fielmente a **estrutura real da aplicação**, assegurando a qualidade e a precisão da documentação.
 
 
-## Singleton implementado no projeto
+## 4. Singleton implementado no projeto
 
 A seguir, está o código em python da classe TokenService com a implementação do singleton:
 
@@ -33,11 +33,13 @@ from .token_strategy import (
     EconomiaRecursosStrategy, DescarteCorretoStrategy,
     PlantioArvoreStrategy
 )
+import threading
 
 class TokenService:
     """Serviço de gerenciamento de tokens usando padrões Singleton e Strategy."""
 
     _instance = None
+    _lock = threading.Lock()
 
     def __new__(cls):
         """Implementa padrão Singleton."""
@@ -78,10 +80,49 @@ class TokenService:
         return list(self.estrategias.keys())
 ```
 
+O padrão Singleton garante que apenas uma única instância do serviço de gerenciamento de tokens seja criada e utilizada em toda a aplicação. Para isso, a classe possui um atributo de classe `_instance`, que inicialmente é `None` e armazena a instância única. O método `__new__` é responsável por criar a instância apenas uma vez: se `_instance` ainda não foi definida, ele cria a instância e a salva; caso contrário, retorna a instância já existente. Dessa forma, não importa quantas vezes a classe seja instanciada, todos os pontos da aplicação receberão a mesma instância de `TokenService`.
 
-## Diagrama
+O método `__init__` inicializa o dicionário de estratégias (`estrategias`) apenas na primeira execução, garantindo que as estratégias de cálculo de tokens sejam criadas apenas uma vez e mantidas consistentes. A verificação `if not hasattr(self, "estrategias")` impede que a re-instanciação da classe sobrescreva ou recrie as estratégias.
 
-## Teste
+Além disso, a classe fornece métodos para interagir com as estratégias de tokens: `registrar_tokens` calcula e atribui tokens ao usuário com base no tipo de ação, `obter_estrategia` retorna a estratégia correspondente a um tipo de ação, e `listar_tipos_disponiveis` fornece a lista de todas as estratégias disponíveis. Todos esses métodos operam sobre a mesma instância e sobre o mesmo dicionário de estratégias, reforçando o controle centralizado do Singleton.
+
+Para garantir a segurança em cenários concorrentes, a criação da instância única é protegida por um `Lock()`. Isso evita que múltiplos threads criem instâncias diferentes simultaneamente.
+
+
+## 5. Teste do Singleton
+
+Para validar a implementação do padrão Singleton, foram realizados testes que verificam se várias instâncias do TokenService realmente apontam para o mesmo objeto em memória, garantindo que não haja duplicação de instâncias.
+
+### 5.1 Gravação do teste
+
+No teste, foram criadas 3 instâncias de TokenService. Observamos que todas as instâncias compartilhavam o mesmo estado, confirmando que o Singleton funciona corretamente.
+
+[Teste Singleton]()
+
+### 5.2 Print do teste
+
+O print abaixo mostra o resultado do teste, evidenciando que diferentes variáveis que receberam TokenService() apontam para o mesmo objeto.
+
+[Print Singleton](../assets/singleton_print.png)
+
+## 6. Diagrama
+
+### 6.1 Diagrama Singleton
+
+A seguir temos o diagrama do GOF Singleton: 
+
+[Diagrama do Singleton](../assets/singleton_diagrama.jpg)
+
+
+### 6.2 Gravação da produção do Diagrama Singleton
+
+A seguir está disponível a gravação em vídeo que ilustra o processo de discussão e implementação do diagrama:
+
+[![Assista à gravação](https://youtu.be/5hhxbg8col4)](https://youtu.be/5hhxbg8col4)
+
+Link da reunião em: https://youtube.com/embed/5hhxbg8col4
+
+
 
 ## Participação na Produção do Artefato
 
@@ -91,9 +132,24 @@ class TokenService:
 
 ## Conclusão
 
-O padrão **Singleton** implementado no projeto *SustentabilidadeJá* demonstrou ser uma solução eficaz para garantir que o serviço de tokens possua **uma única instância acessível globalmente**, evitando inconsistências e uso redundante de recursos.  
+O padrão Singleton implementado no serviço de tokens mostrou ser uma solução eficiente para garantir que o serviço de tokens possua uma única instância acessível globalmente, evitando inconsistências e uso redundante de recursos.  
 
-A aplicação do padrão foi guiada pelos **diagramas de modelagem da Entrega 2**, o que permitiu ao grupo manter a **consistência arquitetural** e assegurar que a implementação estivesse alinhada com o planejamento definido previamente.  
-Ademais, o diagrama do Singleton construído a partir da interpretação do código-fonte confirmou a correta estruturação da classe `TokenService` e permitiu uma documentação clara para futuras manutenções ou extensões.  
+A aplicação do padrão foi guiada pelos diagramas de modelagem da Entrega 2, o que permitiu ao grupo manter a consistência arquitetural e assegurar que a implementação estivesse alinhada com o planejamento definido previamente.  
+Ademais, o diagrama e os testes do Singleton construído a partir da interpretação do código-fonte confirmou a correta estruturação da classe `TokenService`.
+
+## Referências Bibliográficas
+
+
+## Bibliografia
+
+
+
+## Histórico de Versões
+
+| Versão | Descrição                            | Autor(es)                                                                                         | Data       | Revisor(es)                                                                                                 | Data de Revisão |
+| ------ | ------------------------------------ | ------------------------------------------------------------------------------------------------- | ---------- | ----------------------------------------------------------------------------------------------------------- | --------- |
+| 1.0    | Criação do documento, com introdução, metodologia e o código | [Artur Mendonça Arruda](https://github.com/ArtyMend07), [Gabriel Lopes ](https://github.com/BrzGab) e [Lucas Mendonça Arruda](https://github.com/lucasarruda9) | 23/10/2025 |  | |
+| 1.1    | Adicionando explicação do código, gravação do diagrama, diagrama e print dos testes | [Artur Mendonça Arruda](https://github.com/ArtyMend07), [Gabriel Lopes ](https://github.com/BrzGab) e [Lucas Mendonça Arruda](https://github.com/lucasarruda9) | 23/10/2025 |  | |
+
 
 
