docs: Adiciona análise crítica e outras informações de contribuições na tabela de participação

--- a/docs/PadroesDeProjeto/3.1.1Singleton.md
+++ b/docs/PadroesDeProjeto/3.1.1Singleton.md
@@ -119,7 +119,8 @@ Link da reunião em: https://youtube.com/embed/5hhxbg8col4
 
 | Nome do Integrante | Artefato | Descrição da Contribuição | Análise Crítica |
 |--------------------|----------|---------------------------|-----------------|
-| Lucas Mendonça Arruda | Diagrama Singleton e  | Contribui na documentação do artefato, como na elaboração da metodologia e a conclusão, além de participar da criação do diagrama Singleton, auxiliando na produção dos vídeos explicativos sobre o artefato. | Considerei o artefato bastante desafiador por envolver manipulação de código, mas achei que o desenvolvimento dos diagramas e do artefato em equipe tornou mais fácil solucionar problemas e criar artefatos. Achei que o diagrama e os códigos estavam coerentes e condizentes com o conceito do padrão Singleton. |
+| Artur Mendonça Arruda | Diagrama Singleton, código  | Contribui na documentação do artefato, como na gravação / upload do vídeo de testes, participei ativamente na criação e consolidação do diagrama singleton. |  Em minha análise do padrão Singleton, a primeira coisa que notei foi o quão surpreendentemente simples o diagrama de classes é. Ele basicamente mostra uma classe, TokenService, com seus métodos e um cliente que a utiliza. Enquanto isso, o código me causou um sentimento inversamente proporcional, especialmente por causa da criação do semáforo para não permetir que uma instância concorra com outra na região crítica do código. |
+| Lucas Mendonça Arruda | Diagrama Singleton, código  | Contribui na documentação do artefato, como na elaboração da metodologia e a conclusão, além de participar da criação do diagrama Singleton, auxiliando na produção dos vídeos explicativos sobre o artefato. | Considerei o artefato bastante desafiador por envolver manipulação de código, mas achei que o desenvolvimento dos diagramas e do artefato em equipe tornou mais fácil solucionar problemas e criar artefatos. Achei que o diagrama e os códigos estavam coerentes e condizentes com o conceito do padrão Singleton. |
 
 ## 7. Conclusão
 
@@ -152,6 +153,7 @@ GAMMA, Erich; HELM, Richard; JOHNSON, Ralph; VLISSIDES, John. *Design Patterns: 
 | 1.0    | Criação do documento, com introdução, metodologia e o código | [Artur Mendonça Arruda](https://github.com/ArtyMend07), [Gabriel Lopes ](https://github.com/BrzGab) e [Lucas Mendonça Arruda](https://github.com/lucasarruda9) | 23/10/2025 |  | |
 | 1.1    | Adicionando explicação do código, gravação do diagrama, diagrama e print dos testes | [Artur Mendonça Arruda](https://github.com/ArtyMend07), [Gabriel Lopes ](https://github.com/BrzGab) e [Lucas Mendonça Arruda](https://github.com/lucasarruda9) | 23/10/2025 |  | |
 | 1.2    | refinando metodologia, adicionando referências e rastreabilidade com outras entregas| [Artur Mendonça Arruda](https://github.com/ArtyMend07), [Gabriel Lopes ](https://github.com/BrzGab) e [Lucas Mendonça Arruda](https://github.com/lucasarruda9) | 23/10/2025 |  | |
+| 1.3    | Adição de informações e análise crítica na tabela de participações | [Artur Mendonça Arruda](https://github.com/ArtyMend07) | 23/10/2025 |  | |
 
 
 
