docs: adicionando contribuição e analise critica

--- a/docs/PadroesDeProjeto/3.1.1Singleton.md
+++ b/docs/PadroesDeProjeto/3.1.1Singleton.md
@@ -121,6 +121,7 @@ Link da reunião em: https://youtube.com/embed/5hhxbg8col4
 |--------------------|----------|---------------------------|-----------------|
 | Artur Mendonça Arruda | Diagrama Singleton, código  | Contribui na documentação do artefato, como na gravação / upload do vídeo de testes, participei ativamente na criação e consolidação do diagrama singleton. |  Em minha análise do padrão Singleton, a primeira coisa que notei foi o quão surpreendentemente simples o diagrama de classes é. Ele basicamente mostra uma classe, TokenService, com seus métodos e um cliente que a utiliza. Enquanto isso, o código me causou um sentimento inversamente proporcional, especialmente por causa da criação do semáforo para não permetir que uma instância concorra com outra na região crítica do código. |
 | Lucas Mendonça Arruda | Diagrama Singleton, código  | Contribui na documentação do artefato, como na elaboração da metodologia e a conclusão, além de participar da criação do diagrama Singleton, auxiliando na produção dos vídeos explicativos sobre o artefato. | Considerei o artefato bastante desafiador por envolver manipulação de código, mas achei que o desenvolvimento dos diagramas e do artefato em equipe tornou mais fácil solucionar problemas e criar artefatos. Achei que o diagrama e os códigos estavam coerentes e condizentes com o conceito do padrão Singleton. |
+| Gabriel Lopes de Amorim | Diagrama Singleton, código  | Contribuí de forma ativa na elaboração do artefato, participando da escrita da introdução e auxiliando na implementação do código relacionado ao padrão Singleton. Também colaborei parcialmente na construção da metodologia e na revisão geral do documento, garantindo a coerência entre o diagrama, o código e a explicação teórica.| Considero que o desenvolvimento do padrão Singleton foi um ótimo exercício de compreensão da lógica de controle de instâncias e do uso de recursos compartilhados. O processo me ajudou a entender melhor a importância da estrutura e do encapsulamento no código. A experiência foi produtiva e reforçou minha capacidade de integrar conceitos teóricos à prática de programação. |
 
 ## 7. Conclusão
 
@@ -154,7 +155,7 @@ GAMMA, Erich; HELM, Richard; JOHNSON, Ralph; VLISSIDES, John. *Design Patterns: 
 | 1.1    | Adicionando explicação do código, gravação do diagrama, diagrama e print dos testes | [Artur Mendonça Arruda](https://github.com/ArtyMend07), [Gabriel Lopes ](https://github.com/BrzGab) e [Lucas Mendonça Arruda](https://github.com/lucasarruda9) | 23/10/2025 |  | |
 | 1.2    | refinando metodologia, adicionando referências e rastreabilidade com outras entregas| [Artur Mendonça Arruda](https://github.com/ArtyMend07), [Gabriel Lopes ](https://github.com/BrzGab) e [Lucas Mendonça Arruda](https://github.com/lucasarruda9) | 23/10/2025 |  | |
 | 1.3    | Adição de informações e análise crítica na tabela de participações | [Artur Mendonça Arruda](https://github.com/ArtyMend07) | 23/10/2025 |  | |
-
+| 1.4    | Adicionando contribuição e análise crítica | [Gabriel Lopes de Amorim](https://github.com/BrzGab) | 24/10/2025 |  | |
 
 
 
