--- a/docs/PadroesDeProjeto/3.3.2Strategy.md
+++ b/docs/PadroesDeProjeto/3.3.2Strategy.md
@@ -7,7 +7,16 @@ O Strategy é um tipo de GOF estrutural que tem como encapsular uma família de 
 ## 2. Metodologia
 
 
+Para implementar o serviço de cálculo de tokens utilizando o padrão Strategy, os integrantes do projeto se apoiaram nos artefatos desenvolvidos na Entrega 2, especialmente o [Diagrama de Sequência – Registrar Ação Sustentável](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_02/blob/main/docs/Modelagem/2.2.1.DiagramaDeSequencia.md) e o [Diagrama de Pacotes](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_02/blob/main/docs/Modelagem/2.3.1.DiagramaDePacote.md). Garantindo que o serviço de cálculo de tokens seja encapsulada em novas estratégias de ações sem alterar o código original.
+
+Seguindo os diagramas, o grupo manteve a consistência da arquitetura planejada, implementando o padrão Strategy dentro da estrutura de pastas **`App/tokens`**, conforme definido na modelagem anterior, especificamente nos arquivos **`token_servico.py`** e **`token_strategy.py`**. Posteriormente, o grupo percebeu que seria necessário atualizar o Diagrama de Pacotes para refletir o modelo atual, em que os arquivos estão localizados na pasta **`App/tokens/servicos`**.  
+O diagrama do Strategy foi desenvolvido em conjunto pelos integrantes responsáveis com base nos materiais da professora, como slides e vídeo-aulas e no livro Design Patterns: Elements of Reusable Object-Oriented Software. 
+
 ## 3. Strategy implementado no projeto
+
+Antes de analisar o código, é importante entender os papéis dos elementos do padrão Strategy. O Strategy é dividido em 3 participantes, que seriam a Estratégia, Estratégia Concreta e o Contexto. A Estratégia define uma interface comum para uma família de algoritmos, as Estratégias Concretas implementam esses algoritmos específicos, enquanto o Contexto mantém uma referência à estratégia e a utiliza para executar a lógica desejada. <a id="anchor_2" href=#FRM2> [2]</a> (Gamma et al., 1994).
+
+
 
 A seguir, estão as classes responsáveis pela implementação do padrão Strategy, separadas por arquivo e localização no projeto:
 
@@ -163,8 +172,11 @@ Link do vídeo pro Youtube: [Gravação Diagrama Strategy](https://youtu.be/MLlE
 
 ## Referências Bibliográficas
 
-> <a id="FRM1" href="#anchor_1">1.</a>GAMMA, Erich; HELM, Richard; JOHNSON, Ralph; VLISSIDES, John. *Design Patterns: Elements of Reusable Object-Oriented Software*. Boston: Addison-Wesley, 1994.
-![livro Design Patterns](https://raw.githubusercontent.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/refs/heads/docs/Singleton/docs/assets/referencias/singleton_ref.png)
+> <a id="FRM1" href="#anchor_1">1.</a>GAMMA, Erich; HELM, Richard; JOHNSON, Ralph; VLISSIDES, John. *Design Patterns: Elements of Reusable Object-Oriented Software*. Boston: Addison-Wesley, 1994, p. 315.
+![livro Design Patterns](../assets/referencias/Strategy_ref2.png)
+
+> <a id="FRM2" href="#anchor_2">2.</a>GAMMA, Erich; HELM, Richard; JOHNSON, Ralph; VLISSIDES, John. *Design Patterns: Elements of Reusable Object-Oriented Software*. Boston: Addison-Wesley, 1994, p. 317.
+![livro Design Patterns](../assets/referencias/Strategy_ref1.png)
 
 ## Bibliografia
 
@@ -183,6 +195,8 @@ GAMMA, Erich; HELM, Richard; JOHNSON, Ralph; VLISSIDES, John. *Design Patterns: 
 | Versão | Descrição                            | Autor(es)                                                                                         | Data       | Revisor(es)                                                                                                 | Data de Revisão |
 | ------ | ------------------------------------ | ------------------------------------------------------------------------------------------------- | ---------- | ----------------------------------------------------------------------------------------------------------- | --------- |
 | 1.0    | Criação do documento, adicionando diagrama, introdução, código, testes e referências | [Artur Mendonça Arruda](https://github.com/ArtyMend07), [Gabriel Lopes ](https://github.com/BrzGab) e [Lucas Mendonça Arruda](https://github.com/lucasarruda9) | 24/10/2025 |  | |
+| 1.1    | Melhorando referências e adicionando metodologia | [Artur Mendonça Arruda](https://github.com/ArtyMend07), [Gabriel Lopes ](https://github.com/BrzGab) e [Lucas Mendonça Arruda](https://github.com/lucasarruda9) | 24/10/2025 |  | |
+
 
 
 
