docs:adiciona analise do codigo, conclusao e melhora metodologia
Co-authored-by: Artur Mendonça Arruda <arturmendoncaarruda@gmail.com>
Co-authored-by: Gabriel Lopes de Amorim <gabriellopes16001@gmail.com>

--- a/docs/PadroesDeProjeto/3.3.2Strategy.md
+++ b/docs/PadroesDeProjeto/3.3.2Strategy.md
@@ -2,20 +2,19 @@
 
 ## 1. Introdução 
 
-O Strategy é um tipo de GOF estrutural que tem como encapsular uma família de algoritmos e tornar eles intercambiáveis, variando independente dos clientes que forem utilizar eles. <a id="anchor_1" href=#FRM1> [1]</a> (Gamma et al., 1994). Esse padrão é bastante importante no contexto do projeto, pois... Esse padrão é bastante importante no contexto do projeto, pois permite definir diferentes formas de cálculo de recompensas (tokens) para cada tipo de ação sustentável, como reciclagem, transporte ou plantio de árvores sem precisar modificar a lógica principal do sistema. 
+O Strategy é um tipo de GOF estrutural que tem como encapsular uma família de algoritmos e tornar eles intercambiáveis, variando independente dos clientes que forem utilizar eles. <a id="anchor_1" href=#FRM1> [1]</a> (Gamma et al., 1994). Esse padrão é bastante importante no contexto do projeto, pois permite definir diferentes formas de cálculo de tokens para cada tipo de ação sustentável, como reciclagem, transporte ou plantio de árvores sem precisar modificar a lógica principal do sistema. 
 
 ## 2. Metodologia
-
 
 Para implementar o serviço de cálculo de tokens utilizando o padrão Strategy, os integrantes do projeto se apoiaram nos artefatos desenvolvidos na Entrega 2, especialmente o [Diagrama de Sequência – Registrar Ação Sustentável](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_02/blob/main/docs/Modelagem/2.2.1.DiagramaDeSequencia.md) e o [Diagrama de Pacotes](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_02/blob/main/docs/Modelagem/2.3.1.DiagramaDePacote.md). Garantindo que o serviço de cálculo de tokens seja encapsulada em novas estratégias de ações sem alterar o código original.
 
 Seguindo os diagramas, o grupo manteve a consistência da arquitetura planejada, implementando o padrão Strategy dentro da estrutura de pastas **`App/tokens`**, conforme definido na modelagem anterior, especificamente nos arquivos **`token_servico.py`** e **`token_strategy.py`**. Posteriormente, o grupo percebeu que seria necessário atualizar o Diagrama de Pacotes para refletir o modelo atual, em que os arquivos estão localizados na pasta **`App/tokens/servicos`**.  
-O diagrama do Strategy foi desenvolvido em conjunto pelos integrantes responsáveis com base nos materiais da professora, como slides e vídeo-aulas e no livro Design Patterns: Elements of Reusable Object-Oriented Software. 
+O diagrama do Strategy foi desenvolvido em conjunto pelos integrantes responsáveis com base nos materiais da professora, como slides e vídeo-aulas e no livro Design Patterns: Elements of Reusable Object-Oriented Software. O diagrama será utilizado para guiar a implementação do padrão Strategy no código e também como referência para futuras consultas sobre a arquitetura do sistema, oferecendo uma visão clara de como as classes funcionam.
+
 
 ## 3. Strategy implementado no projeto
 
 Antes de analisar o código, é importante entender os papéis dos elementos do padrão Strategy. O Strategy é dividido em 3 participantes, que seriam a Estratégia, Estratégia Concreta e o Contexto. A Estratégia define uma interface comum para uma família de algoritmos, as Estratégias Concretas implementam esses algoritmos específicos, enquanto o Contexto mantém uma referência à estratégia e a utiliza para executar a lógica desejada. <a id="anchor_2" href=#FRM2> [2]</a> (Gamma et al., 1994).
-
 
 
 A seguir, estão as classes responsáveis pela implementação do padrão Strategy, separadas por arquivo e localização no projeto:
@@ -125,6 +124,9 @@ class PlantioArvoreStrategy(TokenStrategy):
 ```
 ### 3.3 Análise do código
 
+No projeto, o padrão Strategy é implementado da seguinte forma: 
+
+A classe `TokenStrategy` do arquivo `token_strategy.py` atua como a "Strategy", definindo a interface `calcular_tokens(acao)` que todas as estratégias concretas devem implementar. Já as classes `ReciclagemStrategy`, `TransporteStrategy`, `EconomiaRecursosStrategy`, `DescarteCorretoStrategy` e `PlantioArvoreStrategy`, são as "ConcreteStrategy", pois implementam o método de cálculo de tokens de forma específica para cada tipo de ação. A classe `TokenService`, localizada em `token_servico.py`, funciona como o "Context", mantendo referências das estratégias, selecionando a estratégia adequada e oferecendo métodos como `registrar_tokens`, `obter_estrategia` e `listar_tipos_disponiveis`.
 
 ## 4. Teste do Strategy
 
@@ -136,13 +138,13 @@ No teste, foi criado o usuário "Maria Silva" que começa com saldo 0, uma lista
 
 [Teste Strategy](https://youtube.com/embed/RYR31CU8nts)
 
-Link do vídeo pro Youtube: [Teste Singleton](https://youtu.be/RYR31CU8nts)
+Link do vídeo pro Youtube: [Teste Strategy](https://youtu.be/RYR31CU8nts)
 
 ### 4.2 Resultado do teste
 
 O print abaixo mostra o resultado do teste, evidenciando que diferentes variáveis que receberam TokenService() apontam para o mesmo objeto.
 
-[Print Singleton](../assets/strategy_print.png)
+[Print Strategy](../assets/strategy_print.png)
 
 ## 5. Diagrama
 
@@ -150,7 +152,7 @@ O print abaixo mostra o resultado do teste, evidenciando que diferentes variáve
 
 A seguir temos o diagrama do GOF Strategy: 
 
-[Diagrama do Singleton](../assets/strategy_diagrama.jpg)
+[Diagrama do Strategy](../assets/strategy_diagrama.jpg)
 
 
 ### 5.2 Gravação da produção do Diagrama Strategy
@@ -168,7 +170,7 @@ Link do vídeo pro Youtube: [Gravação Diagrama Strategy](https://youtu.be/MLlE
 
 ## 7. Conclusão
 
-
+O uso do padrão Strategy é importante nessas classes porque permite encapsular diferentes formas de cálculo de tokens de maneira modular e intercambiável. Isso torna o código mais flexível, facilita a manutenção e a expansão do sistema, permitindo adicionar ou modificar estratégias sem impactar outras partes do código. Além disso, o diagrama foi importante para o artefato porque permitiu organizar e visualizar claramente a relação entre as classes, facilitando o entendimento da arquitetura e a implementação correta do padrão Strategy no projeto.
 
 ## Referências Bibliográficas
 
@@ -196,6 +198,7 @@ GAMMA, Erich; HELM, Richard; JOHNSON, Ralph; VLISSIDES, John. *Design Patterns: 
 | ------ | ------------------------------------ | ------------------------------------------------------------------------------------------------- | ---------- | ----------------------------------------------------------------------------------------------------------- | --------- |
 | 1.0    | Criação do documento, adicionando diagrama, introdução, código, testes e referências | [Artur Mendonça Arruda](https://github.com/ArtyMend07), [Gabriel Lopes ](https://github.com/BrzGab) e [Lucas Mendonça Arruda](https://github.com/lucasarruda9) | 24/10/2025 |  | |
 | 1.1    | Melhorando referências e adicionando metodologia | [Artur Mendonça Arruda](https://github.com/ArtyMend07), [Gabriel Lopes ](https://github.com/BrzGab) e [Lucas Mendonça Arruda](https://github.com/lucasarruda9) | 24/10/2025 |  | |
+| 1.1    | adicionando diagrama, análise do código, e melhorando metodologia | [Artur Mendonça Arruda](https://github.com/ArtyMend07), [Gabriel Lopes ](https://github.com/BrzGab) e [Lucas Mendonça Arruda](https://github.com/lucasarruda9) | 24/10/2025 |  | |
 
 
 
